Final commit of SPAM SMS DETECTION

--- a/Spam-SMS-Detection/notebooks/Spam_SMS_detection.ipynb
+++ b/Spam-SMS-Detection/notebooks/Spam_SMS_detection.ipynb
@@ -1,21 +1,12 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "js4GPOK5rRSf"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import re\n",
@@ -23,15 +14,33 @@
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import classification_report, confusion_matrix\n"
-      ],
-      "metadata": {
-        "id": "js4GPOK5rRSf"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6nENINWXrWfs",
+        "outputId": "2cf50bc3-58a1-4674-fff9-19e4ef6b1659"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sample data:\n",
+            "  label                                            message\n",
+            "0   ham  Go until jurong point, crazy.. Available only ...\n",
+            "1   ham                      Ok lar... Joking wif u oni...\n",
+            "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
+            "3   ham  U dun say so early hor... U c already then say...\n",
+            "4   ham  Nah I don't think he goes to usf, he lives aro...\n"
+          ]
+        }
+      ],
       "source": [
         "# 1. Load the dataset\n",
         "file_path = r\"/content/spam.csv\"  # Use raw string or double backslashes\n",
@@ -47,45 +56,27 @@
         "\n",
         "print(\"Sample data:\")\n",
         "print(df.head())"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6nENINWXrWfs",
-        "outputId": "2cf50bc3-58a1-4674-fff9-19e4ef6b1659"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Sample data:\n",
-            "  label                                            message\n",
-            "0   ham  Go until jurong point, crazy.. Available only ...\n",
-            "1   ham                      Ok lar... Joking wif u oni...\n",
-            "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
-            "3   ham  U dun say so early hor... U c already then say...\n",
-            "4   ham  Nah I don't think he goes to usf, he lives aro...\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 2. Map labels to binary values: 'ham' -> 0, 'spam' -> 1\n",
-        "df['label'] = df['label'].map({'ham': 0, 'spam': 1})"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Jb1LsmnfrcKX"
       },
-      "execution_count": 11,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 2. Map labels to binary values: 'ham' -> 0, 'spam' -> 1\n",
+        "df['label'] = df['label'].map({'ham': 0, 'spam': 1})"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uAgMmc2srenv"
+      },
+      "outputs": [],
       "source": [
         "# 3. Clean the text messages\n",
         "def clean_text(text):\n",
@@ -94,47 +85,38 @@
         "    return text\n",
         "\n",
         "df['message'] = df['message'].apply(clean_text)"
-      ],
-      "metadata": {
-        "id": "uAgMmc2srenv"
-      },
-      "execution_count": 12,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4VupdO49rgSY"
+      },
+      "outputs": [],
       "source": [
         "# 4. Split into training and testing sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    df['message'], df['label'], test_size=0.2, random_state=42)"
-      ],
-      "metadata": {
-        "id": "4VupdO49rgSY"
-      },
-      "execution_count": 13,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "IZQbtPYIriS6"
+      },
+      "outputs": [],
       "source": [
         "# 5. Vectorize text using TF-IDF\n",
         "vectorizer = TfidfVectorizer(stop_words='english', max_features=3000)\n",
         "X_train_vec = vectorizer.fit_transform(X_train)\n",
         "X_test_vec = vectorizer.transform(X_test)"
-      ],
-      "metadata": {
-        "id": "IZQbtPYIriS6"
-      },
-      "execution_count": 14,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 6. Train a Logistic Regression model\n",
-        "model = LogisticRegression()\n",
-        "model.fit(X_train_vec, y_train)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -143,14 +125,9 @@
         "id": "NtKdOGHGr4-i",
         "outputId": "a6b6f931-0ac2-4946-d4ed-81f61f7bd967"
       },
-      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "LogisticRegression()"
-            ],
             "text/html": [
               "<style>#sk-container-id-1 {\n",
               "  /* Definition of color scheme common for light and dark mode */\n",
@@ -568,28 +545,37 @@
               "  background-color: var(--sklearn-color-fitted-level-3);\n",
               "}\n",
               "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LogisticRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression()</pre></div> </div></div></div></div>"
+            ],
+            "text/plain": [
+              "LogisticRegression()"
             ]
           },
+          "execution_count": 15,
           "metadata": {},
-          "execution_count": 15
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# 6. Train a Logistic Regression model\n",
+        "model = LogisticRegression()\n",
+        "model.fit(X_train_vec, y_train)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 7. Predict on test data\n",
-        "y_pred = model.predict(X_test_vec)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "7UxYneRFr6_K"
       },
-      "execution_count": 16,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 7. Predict on test data\n",
+        "y_pred = model.predict(X_test_vec)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -599,8 +585,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Confusion Matrix:\n",
             "[[963   2]\n",
@@ -628,5 +614,19 @@
         "print(classification_report(y_test, y_pred, target_names=['Ham', 'Spam']))"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
